--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -9,8 +9,18 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" href="screen.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <title> Roboto and Catamaran</title>
 </head>
 <body>
-
+  <h1> Fonts Roboto and Catamaran </h1>
+  <link href= "https://fonts.google.com/specimen/Roboto">
+  <link href="https://fonts.google.com/specimen/Catamaran">
+  <p>
+      When looking for fonts to pair, I looked at fonts with a similar feel to
+      each other. I looked at fonts that were similar line style and width.
+  </p>
 </body>
 </html>
